testdata/baselines/reference/submodule/conformance/checkExportsObjectAssignProperty.errors.txt
index.js(4,19): error TS2306: File 'mod1.js' is not a module.
index.js(9,19): error TS2306: File 'mod2.js' is not a module.
mod1.js(1,23): error TS2304: Cannot find name 'exports'.
mod1.js(2,23): error TS2304: Cannot find name 'exports'.
mod1.js(3,23): error TS2304: Cannot find name 'exports'.
mod1.js(4,23): error TS2304: Cannot find name 'exports'.
mod1.js(5,23): error TS2304: Cannot find name 'exports'.
mod2.js(1,23): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod2.js(2,23): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod2.js(3,23): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod2.js(4,23): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod2.js(5,23): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
validator.ts(3,21): error TS2306: File 'mod1.js' is not a module.
validator.ts(23,21): error TS2306: File 'mod2.js' is not a module.


==== validator.ts (2 errors) ====
    import "./";
    
    import m1 = require("./mod1");
                        ~~~~~~~~
!!! error TS2306: File 'mod1.js' is not a module.
    
    m1.thing;
    m1.readonlyProp;
    m1.rwAccessors;
    m1.readonlyAccessor;
    m1.setonlyAccessor;
    
    // allowed assignments
    m1.thing = 10;
    m1.rwAccessors = 11;
    m1.setonlyAccessor = "yes";
    
    // disallowed assignments
    m1.readonlyProp = "name";
    m1.readonlyAccessor = 12;
    m1.thing = "no";
    m1.rwAccessors = "no";
    m1.setonlyAccessor = 0;
    
    import m2 = require("./mod2");
                        ~~~~~~~~
!!! error TS2306: File 'mod2.js' is not a module.
    
    m2.thing;
    m2.readonlyProp;
    m2.rwAccessors;
    m2.readonlyAccessor;
    m2.setonlyAccessor;
    
    // allowed assignments
    m2.thing = "ok";
    m2.rwAccessors = 11;
    m2.setonlyAccessor = "yes";
    
    // disallowed assignments
    m2.readonlyProp = "name";
    m2.readonlyAccessor = 12;
    m2.thing = 0;
    m2.rwAccessors = "no";
    m2.setonlyAccessor = 0;
    
==== mod1.js (5 errors) ====
    Object.defineProperty(exports, "thing", { value: 42, writable: true });
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    Object.defineProperty(exports, "readonlyProp", { value: "Smith", writable: false });
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    Object.defineProperty(exports, "rwAccessors", { get() { return 98122 }, set(_) { /*ignore*/ } });
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    Object.defineProperty(exports, "readonlyAccessor", { get() { return 21.75 } });
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    Object.defineProperty(exports, "setonlyAccessor", {
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
        /** @param {string} str */
        set(str) {
            this.rwAccessors = Number(str) 
        }
    });
    
==== mod2.js (5 errors) ====
    Object.defineProperty(module.exports, "thing", { value: "yes", writable: true });
                          ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    Object.defineProperty(module.exports, "readonlyProp", { value: "Smith", writable: false });
                          ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    Object.defineProperty(module.exports, "rwAccessors", { get() { return 98122 }, set(_) { /*ignore*/ } });
                          ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    Object.defineProperty(module.exports, "readonlyAccessor", { get() { return 21.75 } });
                          ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    Object.defineProperty(module.exports, "setonlyAccessor", {
                          ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        /** @param {string} str */
        set(str) {
            this.rwAccessors = Number(str) 
        }
    });
    
==== index.js (2 errors) ====
    /**
     * @type {number}
     */
    const q = require("./mod1").thing;
                      ~~~~~~~~
!!! error TS2306: File 'mod1.js' is not a module.
    
    /**
     * @type {string}
     */
    const u = require("./mod2").thing;
                      ~~~~~~~~
!!! error TS2306: File 'mod2.js' is not a module.
    